fix: border stylesheet picker

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                       <select
                         id="location"
                         name="location"
-                        class="block w-full py-2 pl-3 pr-10 mt-1 text-base border-gray-300 rounded-md focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm"
+                        class="block w-full py-2 pl-3 pr-10 mt-1 text-base border border-gray-300 rounded-md focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm"
                         @change="handleStyleSheet"
                       >
                         <template x-for="style in stylesheets">
