--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
             let path = document.querySelector('[rel="stylesheet"]').href;
             path =
               path.substring(0, path.lastIndexOf("/") + 1) + event.target.value;
-            document.document.querySelector('[rel="stylesheet"]').href = path;
+            document.querySelector('[rel="stylesheet"]').href = path;
           },
         }));
       });
