--- a/gh-pages-dist/index.html
+++ b/gh-pages-dist/index.html
@@ -243,7 +243,7 @@
             let path = document.querySelector('[rel="stylesheet"]').href;
             path =
               path.substring(0, path.lastIndexOf("/") + 1) + event.target.value;
-            document.document.querySelector('[rel="stylesheet"]').href = path;
+            document.querySelector('[rel="stylesheet"]').href = path;
           },
         }));
       });
